--- a/pixiDemo/pixiDemo/index.html
+++ b/pixiDemo/pixiDemo/index.html
@@ -432,6 +432,10 @@
    		{
    			if(page==2)
    			{
+				for(var x=0;x<6;x++)
+        			{
+        				is_ok[x] = false;
+        			}
    				//var move = false;
    				for(var i=0;i<17;i++)
    				{
