--- a/index.html
+++ b/index.html
@@ -442,6 +442,10 @@
    		{
    			if(page==2)
    			{
+				for(var m=0;m<6;m++)
+       				{
+        				is_ok[m] = false;
+        			}
    				app.stage.addChild(kuang1);
    				kuang1.anchor.set(0.5,0.5);
    				kuang1.scale.set(0.2,0.2);
